// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render 1`] = `
<label
  class="input"
>
  <input
    type="text"
    value="My value"
  />
</label>
`;

exports[`Input should render null value as empty string 1`] = `
<label
  class="input"
>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`Input should render with a loader 1`] = `
<label
  class="input"
>
  <div
    class="prependedContainer"
  >
    <div
      class="spinner"
      style="width:20px;height:20px"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>
  <input
    type="text"
    value=""
  />
</label>
`;

exports[`Input should render with icon 1`] = `
<label
  class="input"
>
  <div
    class="prependedContainer"
  >
    <span
      aria-label="su-pen"
      class="icon su-pen"
    />
  </div>
  <input
    type="text"
    value="My value"
  />
</label>
`;

exports[`Input should render with invalid value 1`] = `
<label
  class="input error"
>
  <input
    type="text"
    value="My value"
  />
</label>
`;

exports[`Input should render with placeholder 1`] = `
<label
  class="input"
>
  <input
    placeholder="My placeholder"
    type="text"
    value="My value"
  />
</label>
`;

exports[`Input should render with type 1`] = `
<label
  class="input"
>
  <input
    type="password"
    value="My value"
  />
</label>
`;

exports[`Input should render with value 1`] = `
<label
  class="input"
>
  <input
    type="text"
    value="My value"
  />
</label>
`;
